force-app/main/default/objects/Lead_to_Engagement__c/Lead_to_Engagement__c.object-meta.xml
<CustomObject>
    <description>A record is created each time a lead/account engages with us. It stores the Account ID, the engagement ID and any data specific to that interaction.</description>
    <label>Engagement Activity</label>
    <nameField>
        <displayFormat>EN-{000000}</displayFormat>
        <label>Activity Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Activity</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>