force-app/main/default/objects/Lead_to_Engagement__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagement Activity</relationshipLabel>
    <relationshipName>Engagement_Activity</relationshipName>
    <type>Lookup</type>
</CustomField>