force-app/main/default/objects/Lead_to_Engagement__c/fields/Cash__c.field-meta.xml
<CustomField>
    <fullName>Cash__c</fullName>
    <description>Used in Retirement Planer</description>
    <label>Cash</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>