force-app/main/default/objects/Lead_to_Engagement__c/fields/Engine_version__c.field-meta.xml
<CustomField>
    <fullName>Engine_version__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Engine version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>