force-app/main/default/objects/Lead_to_Engagement__c/fields/Future_Planning__c.field-meta.xml
<CustomField>
    <fullName>Future_Planning__c</fullName>
    <description>Used in Get Started | Typeform</description>
    <label>Future Planning</label>
    <type>TextArea</type>
</CustomField>