force-app/main/default/objects/Lead_to_Engagement__c/fields/ISAs__c.field-meta.xml
<CustomField>
    <fullName>ISAs__c</fullName>
    <description>Used in Retirement Planer</description>
    <label>ISAs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>