force-app/main/default/objects/Lead_to_Engagement__c/fields/Other_Investment_Withdrawals__c.field-meta.xml
<CustomField>
    <fullName>Other_Investment_Withdrawals__c</fullName>
    <description>Used in Retirement Planer</description>
    <inlineHelpText>per annum</inlineHelpText>
    <label>Other Investment Withdrawals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>