force-app/main/default/objects/Lead_to_Engagement__c/fields/Other_Investments__c.field-meta.xml
<CustomField>
    <fullName>Other_Investments__c</fullName>
    <description>Used in Retirement Planer</description>
    <label>Other Investments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>