force-app/main/default/objects/Lead_to_Engagement__c/fields/Pension_Contributions__c.field-meta.xml
<CustomField>
    <fullName>Pension_Contributions__c</fullName>
    <description>Used in Retirement Planer</description>
    <inlineHelpText>£ per annum</inlineHelpText>
    <label>Pension Contributions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>