force-app/main/default/objects/Lead_to_Engagement__c/fields/Pension_Withdrawals__c.field-meta.xml
<CustomField>
    <fullName>Pension_Withdrawals__c</fullName>
    <description>Used in Retirement Planer</description>
    <inlineHelpText>Per annum</inlineHelpText>
    <label>Pension Withdrawals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>