force-app/main/default/objects/Lead_to_Engagement__c/fields/Retirement_Age__c.field-meta.xml
<CustomField>
    <fullName>Retirement_Age__c</fullName>
    <description>Used in Retirement Planer</description>
    <label>Retirement Age</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>