force-app/main/default/objects/Lead_to_Engagement__c/fields/Wealth_Marketing_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>Wealth_Marketing_Opt_In__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Wealth Marketing Opt In</label>
    <type>Checkbox</type>
</CustomField>