force-app/main/default/objects/Lead_to_Engagement__c/recordTypes/Resource_Download.recordType-meta.xml
<RecordType>
    <fullName>Resource_Download</fullName>
    <active>true</active>
    <label>Resource Download</label>
</RecordType>