force-app/main/default/objects/Lead_to_Engagement__c/listViews/Typeform.listView-meta.xml
<ListView>
    <fullName>Typeform</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>First_Name__c</columns>
    <columns>Last_Name__c</columns>
    <columns>Email__c</columns>
    <columns>Lead_and_Referral__c</columns>
    <columns>Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Lead_to_Engagement__c.Get_Started_Typeform</value>
    </filters>
    <label>Typeform</label>
</ListView>